deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ars
  namespace: ars
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: ars
  type: NodePort
